--- a/yudao-server/pom.xml
+++ b/yudao-server/pom.xml
@@ -33,11 +33,20 @@
         </dependency>
 
         <!-- 会员中心。默认注释，保证编译速度 -->
-<!--        <dependency>-->
-<!--            <groupId>cn.iocoder.boot</groupId>-->
-<!--            <artifactId>yudao-module-member-biz</artifactId>-->
-<!--            <version>${revision}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>cn.iocoder.boot</groupId>
+            <artifactId>yudao-module-member-biz</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
+
+        <!-- 名片app -->
+        <dependency>
+            <groupId>cn.iocoder.boot</groupId>
+            <artifactId>yudao-module-busicard-biz</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
 
         <!-- 数据报表。默认注释，保证编译速度 -->
 <!--        <dependency>-->
