--- a/yudao-server/pom.xml
+++ b/yudao-server/pom.xml
@@ -111,11 +111,11 @@
 <!--        </dependency>-->
 
         <!-- AI 大模型相关模块。默认注释，保证编译速度 -->
-        <dependency>
+<!--        <dependency>
             <groupId>cn.iocoder.boot</groupId>
             <artifactId>yudao-module-ai-biz</artifactId>
             <version>${revision}</version>
-        </dependency>
+        </dependency>-->
 
         <!-- IoT 物联网相关模块。默认注释，保证编译速度 -->
 <!--        <dependency>-->
