--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 <!--        <module>yudao-module-report</module>-->
         <module>yudao-module-mp</module>
         <module>yudao-module-pay</module>
-<!--        <module>yudao-module-mall</module>-->
+        <module>yudao-module-mall</module>
         <module>yudao-module-crm</module>
 <!--        <module>yudao-module-erp</module>-->
 <!--        <module>yudao-module-iot</module>-->
